--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.364.0",
+    "next": "14.1.4",
+    "pigeon-maps": "^0.21.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-leaflet": "^4.2.1",
+    "react-simple-maps": "^3.0.0",
+    "react-speech-kit": "^3.0.1",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
