--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -20,6 +22,7 @@
     "pigeon-maps": "^0.21.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
     "react-simple-maps": "^3.0.0",
     "react-speech-kit": "^3.0.1",
